Update .gitignore to include extra.txt and customAPIAndErrorHandling.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 
 # Avoid Adding Final-Project.md contains everything about Project
 Final-Project.md
+extra.txt
+customAPIAndErrorHandling.md
 
 # Logs
 logs
